--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,7 +29,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
   google_fonts: ^1.1.0 # it helps us to use google fonts on our app
-  flutter_svg:  # it helps us to use SVG in our app
+  #flutter_svg:  # it helps us to use SVG in our app
   provider: ^4.3.2+1 # Our state management package
   flutter_calendar_carousel: ^1.4.12
 
