--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   #flutter_svg:  # it helps us to use SVG in our app
   provider: ^4.3.2+1 # Our state management package
   flutter_calendar_carousel: ^1.4.12
+  http: ^0.12.2
 
 dev_dependencies:
   flutter_test:
@@ -51,3 +52,4 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/icons/
+    - json/
